chore: ported to 26.1
Starts up and mostly running, there is much work to do yet
- Fabric not working yet (need to port all events)
- Quest buttons not rendering correctly
- Very little testing done